fixing button alignment

--- a/src/components/bom/Bom.scss
+++ b/src/components/bom/Bom.scss
@@ -23,7 +23,12 @@ li {
 
 
 .button{
-  column-width: 0px;
+  text-align: center;
+  width: 50%;
+}
+
+.button1{
+  width: 50%;
 }
 
 .text{
